Fixing disable button merge issue and removing background of ghost button examples in dark mode

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -148,7 +148,9 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
 }
 
 .guideDemo__ghostBackground {
-  background: #444;
+  @if (lightness($euiTextColor) < 50) {
+    background: $euiColorDarkestShade;
+  }
   padding: $euiSizeL;
 }
 
