--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -28,10 +28,7 @@
     }
   }
 
-  &:hover {
-    @include euiSlightShadowHover;
-  }
-
+  &:hover,
   &:active {
     @include euiSlightShadowHover;
   }
@@ -64,9 +61,7 @@
 
     &:hover, &:focus {
       @include euiSlightShadow;
-
       text-decoration: none;
-      box-shadow: none;
     }
   }
 }
@@ -86,23 +81,11 @@ $buttonTypes: (
     color: $color;
     border-color: $color;
 
-    $shadowColor: $euiShadowColor;
-
-    @if ($name == 'ghost') {
-      $shadowColor: #000;
-    } @else if (lightness($euiTextColor) < 50) {
-      // Only if this is the light theme do we use the button variant color to colorize the shadow
-      $shadowColor: desaturate($color, 60%);
-    }
-
-    @include euiSlightShadow($shadowColor);
-
     &.euiButton--fill {
       background-color: $color;
       border-color: $color;
 
       $textColor: #FFF;
-
       @if ($name == 'ghost') {
         $textColor: #000;
       } @else if (lightness($euiTextColor) > 50) {
@@ -123,17 +106,33 @@ $buttonTypes: (
       }
     }
 
-    &:hover, &:focus {
-      background-color: transparentize($color, .9);
-      @include euiSlightShadowHover($shadowColor);
+    &:enabled {
+      $shadowColor: $euiShadowColor;
+      @if ($name == 'ghost') {
+        $shadowColor: #000;
+      } @else if (lightness($euiTextColor) < 50) {
+        // Only if this is the light theme do we use the button variant color to colorize the shadow
+        $shadowColor: desaturate($color, 60%);
+      }
 
-      @if ($name == 'disabled') {
-        cursor: not-allowed;
+      @include euiSlightShadow($shadowColor);
+
+      &:hover, &:focus {
+        @include euiSlightShadowHover($shadowColor);
+        background-color: transparentize($color, .9);
+
+        @if ($name == 'disabled') {
+          cursor: not-allowed;
+        }
       }
     }
 
-    &:disabled {
-      box-shadow: none;
+    &:disabled,
+    &:disabled:hover,
+    &:disabled:focus {
+      @if ($name == 'ghost') {
+        @include euiSlightShadow(#000);
+      }
     }
   }
 }
